# bhbus

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  bhbus
configs/: stops.conf
dashboard/: app.js  index.html  package-lock.json  package.json  styles.css  tsconfig.app.json  tsconfig.node.json  vite.config.ts
dashboard/src/: App.tsx  main.tsx  styles.css
dashboard/src/components/: BusTable.tsx  Header.tsx  MetricCard.tsx  OperationalSummary.tsx  StopDetails.tsx
dashboard/src/hooks/: useSnapshot.ts
dashboard/src/services/: api.ts
dashboard/src/types/: snapshot.ts
dashboard/src/utils/: formatters.ts
include/: eta_predictor.h  http_client.h
server/: package-lock.json  package.json  server.js
src/: bus_stop_monitor.c  eta_predictor.c  http_client.c
